--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,4 @@ set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
-add_subdirectory(src/blink)
-add_subdirectory(src/blinks-morze)
-add_subdirectory(src/bootsel)
+add_subdirectory(src/apps)
