--- a/src/apps/bootsel/CMakeLists.txt
+++ b/src/apps/bootsel/CMakeLists.txt
@@ -4,7 +4,6 @@ project(${NAME} C CXX ASM)
 
 add_executable(${NAME}
         main.cpp
-        bootsel.cpp
         )
 
 pico_enable_stdio_usb(${NAME} 1)
@@ -13,6 +12,11 @@ pico_enable_stdio_uart(${NAME} 0)
 pico_add_extra_outputs(${NAME})
 
 target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
-target_link_libraries(${NAME} pico_stdlib FreeRTOS-Kernel FreeRTOS-Kernel-Heap4)
+target_link_libraries(${NAME}
+        pico_stdlib
+        FreeRTOS-Kernel
+        FreeRTOS-Kernel-Heap4
+        task-bootsel-pool
+        )
 
 add_flash_target(${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}.uf2")
