--- a/src/apps/blinks-morze/CMakeLists.txt
+++ b/src/apps/blinks-morze/CMakeLists.txt
@@ -11,7 +11,11 @@ pico_enable_stdio_uart(${NAME} 0)
 
 pico_add_extra_outputs(${NAME})
 
-target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
-target_link_libraries(${NAME} pico_stdlib FreeRTOS-Kernel FreeRTOS-Kernel-Heap4)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/../../config)
+target_link_libraries(${NAME}
+        pico_stdlib
+        FreeRTOS-Kernel
+        FreeRTOS-Kernel-Heap4
+        )
 
 add_flash_target(${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}.uf2")
