--- a/src/apps/bootsel/CMakeLists.txt
+++ b/src/apps/bootsel/CMakeLists.txt
@@ -11,7 +11,7 @@ pico_enable_stdio_uart(${NAME} 0)
 
 pico_add_extra_outputs(${NAME})
 
-target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
+include_directories(${CMAKE_CURRENT_LIST_DIR}/../../config)
 target_link_libraries(${NAME}
         pico_stdlib
         FreeRTOS-Kernel
