--- a/src/apps/bootsel/CMakeLists.txt
+++ b/src/apps/bootsel/CMakeLists.txt
@@ -19,4 +19,4 @@ target_link_libraries(${NAME}
         task-bootsel-pool
         )
 
-add_flash_target(${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}.uf2")
+add_deploy_target(${NAME} "${CMAKE_CURRENT_BINARY_DIR}/${NAME}.uf2")
