feat: added multicore test

--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,6 +1,2 @@
 add_subdirectory(task-bootsel-pool)
-
-
-target_include_directories(task-bootsel-pool INTERFACE
-        ${CMAKE_CURRENT_LIST_DIR}
-        )
+add_subdirectory(task-blink-sos)
