--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,13 @@
 cmake_minimum_required(VERSION 3.13)
 
+set(PICO_BOARD pico_w)
+
 include(pico_sdk_import.cmake)
 include(scripts/functions.cmake)
 include(FreeRTOS_Kernel_import.cmake)
 
-project(pico-freertos-test C CXX ASM)
+project(pico-freertos-test)
+
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
