--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(blink)
 add_subdirectory(blinks-morze)
 add_subdirectory(bootsel)
 add_subdirectory(multicore)
+add_subdirectory(picow-blink)
