--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(blinks-morze)
 add_subdirectory(bootsel)
 add_subdirectory(multicore)
 add_subdirectory(picow-blink)
+add_subdirectory(picow-sntp)
