feat: added dualsense hid example

--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(bootsel)
 add_subdirectory(multicore)
 add_subdirectory(picow-blink)
 add_subdirectory(picow-wifi-sntp)
+add_subdirectory(picow-bt-dualsense-hid)
