--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(multicore)
 add_subdirectory(picow-blink)
 add_subdirectory(picow-wifi-sntp)
 add_subdirectory(picow-bt-dualsense-hid)
+add_subdirectory(picow-bt-dualsense-l2cap)
